# pickey

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  TODO.md  build.sh  install.sh  release.sh
.github/workflows/: release.yml
packaging/homebrew/: README.md  render-formula.sh
packaging/homebrew/Formula/: pickey.rb
src/: agent.rs  args.rs  cli.rs  config.rs  gitconfig.rs  init.rs  log.rs  main.rs  matcher.rs  ssh.rs
